fix align ImgSideText

--- a/src/components/atoms/ImgSideText/ImgSideText.scss
+++ b/src/components/atoms/ImgSideText/ImgSideText.scss
@@ -9,9 +9,6 @@
     
     .imgSideText-img {
         max-width: 48%;
-
-        margin-bottom: 30px;
-        margin-left: 10px;
     }
 
     .imgSideText-p {
